tests/regression/error/hw5_error22.correct
variable 'f' was previously declared
